--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,16 @@
-#gallery img {
-    width: 560px;
-    height: auto;
-    display: inline;
-    margin: 0;
-    border-radius: 10px;
+/* Name: Mohd Kaif | Student ID: 9043788 */
+/* Style the root element (html) */
+html {
+    font: italic small-caps bold 20px/1.5 'Arial', sans-serif;
+    background-color: #f5f5f5;
+    /* light gray background for full page */
+}
+
+/* Style the body */
+body {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 2rem;
+    border: 1rem solid #ccc;
+    background-color: #ffffff;
 }
