--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 /* Name: Mohd Kaif | Student ID: 9043788 */
 /* Style the root element (html) */
 /* === Layout Container === */
+/* === Layout Container === */
 .container {
     display: flex;
     flex-wrap: wrap;
