--- a/css/styles.css
+++ b/css/styles.css
@@ -85,3 +85,10 @@ button {
     border-radius: 5px;
     cursor: pointer;
 }
+
+footer {
+    text-align: center;
+    padding: 1rem;
+    margin-top: 2rem;
+    color: #555;
+}
